<resources>
    <string name="app_name">The White Owl</string>
    <string name="announcemnt_string">This is where a daily announcement would appear</string>
    <string name="specials_button_string">Daily Specials</string>
    <string name="menu_button_string">Menu</string>
    <string name="beer_menu_button_string">Beers On Tap</string>
    <string name="directions_button_string">Directions</string>
    <string name="contact_line">Contact Us: (435) 753-9165</string>
    <string name="visit_line">Visit Us: 36 W Center St, Logan, UT</string>
    <string name="address_string">36 W Center St, Logan, UT 84321</string>
    <string name="special_label">Daily Special</string>
    <string name="soup_label">Soup of the Day</string>
</resources>
